# VoxPitch

./: .gitignore  43-功能设计文档.docx  CMakeLists.txt  README.md  audiocapturer.cpp  audiocapturer.h  audiofileanalysiswindow.cpp  audiofileanalysiswindow.h  audioplayer.cpp  audioplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  pannablechartview.cpp  pannablechartview.h  pianokeyboard.cpp  pianokeyboard.h  pitchdetector.cpp  pitchdetector.h  pitchtrainerwindow.cpp  pitchtrainerwindow.h  skipbutton.cpp  skipbutton.h
